tetrate/tis802/e2e/bad-resouces.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: invalid-remove-operation
  namespace: default
spec:
  configPatches:
  - applyTo: HTTP_ROUTE
    match:
      context: GATEWAY
    patch:
      operation: REMOVE
