tetrate/tis802/e2e/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validate-envoyfilter-patch-operations
spec:
  validationFailureAction: Enforce
